# t-rust-wasm-app

./: .gitignore  .npmrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-workspace.yaml  rustfmt.toml
{{crate_name}}/: Cargo.toml
{{crate_name}}-lib/: Cargo.toml
{{crate_name}}-lib/src/: lib.rs
{{crate_name}}-web/: eslint.config.js  package.json  vite.config.ts
{{crate_name}}-web-native-lib/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
{{crate_name}}-web-native-lib/benches/: bench.rs
{{crate_name}}-web-native-lib/src/: error.rs  lib.rs
{{crate_name}}-web/src/: App.tsx  index.scss  main.tsx
{{crate_name}}/src/: main.rs
