[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Logging crates
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling crates
color-eyre = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }

"{{crate_name}}-lib" = { path = "../{{crate_name}}-lib" }
